<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pda_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adam.camerawithsaveapi24.PhotoDisplayActivity">


    <ImageView
        android:id="@+id/photoDisplayView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/food_select_button_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="2dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/food_select_button_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_ll" />

    <Button
        android:id="@+id/food_select_button_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text=""
        app:layout_constraintEnd_toStartOf="@+id/food_select_button_three"
        app:layout_constraintStart_toEndOf="@+id/food_select_button_one"
        app:layout_constraintTop_toBottomOf="@+id/list_ll" />

    <Button
        android:id="@+id/food_select_button_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="2dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/food_select_button_two"
        app:layout_constraintTop_toBottomOf="@+id/list_ll" />

    <Button
        android:id="@+id/food_select_button_none"
        android:layout_width="181dp"
        android:layout_height="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/none_of_these"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

    <ProgressBar
        android:id="@+id/photo_display_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:indeterminate="true"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoDisplayView" />

    <!--Parent Linear Layout-->
    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="fill_parent"
        android:layout_height="178dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/food_select_button_one">

        <!--Child One Starts-->
        <LinearLayout
            android:id="@+id/c1_linearLayout1"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/food_select_button_one">

            <TextView
                android:id="@+id/c1_1_tv_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/c1_1_tv_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="Serving Size"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/c1_linearLayout2"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/c1_linearLayout1">


            <TextView
                android:id="@+id/c1_2_tv_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/c1_2_tv_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="Serving Size"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/c1_linearLayout3"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/c1_linearLayout2">

            <TextView
                android:id="@+id/c1_3_tv_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/c1_3_tv_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="Serving Size"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <!--Child Two Starts-->
        <LinearLayout
            android:id="@+id/c2_linearLayout1"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/food_select_button_one">

            <TextView
                android:id="@+id/c2_1_tv_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/c2_1_tv_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="Serving Size"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/c2_linearLayout2"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/c1_linearLayout1">


            <TextView
                android:id="@+id/c2_2_tv_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/c2_2_tv_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="Serving Size"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/c2_linearLayout3"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/c2_linearLayout2">

            <TextView
                android:id="@+id/c2_3_tv_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/c2_3_tv_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="Serving Size"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <!--Child Three Starts-->
        <LinearLayout
            android:id="@+id/c3_linearLayout1"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/food_select_button_one">

            <TextView
                android:id="@+id/c3_1_tv_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/c3_1_tv_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="Serving Size"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/c3_linearLayout2"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/c3_linearLayout1">


            <TextView
                android:id="@+id/c3_2_tv_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/c3_2_tv_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="Serving Size"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/c3_linearLayout3"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/c3_linearLayout2">

            <TextView
                android:id="@+id/c3_3_tv_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_weight="2" />

            <TextView
                android:id="@+id/c3_3_tv_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="Serving Size"
                android:textAlignment="viewEnd" />

        </LinearLayout>

        <!--Parent Linear Ends-->
    </LinearLayout>

    <include
        android:id="@+id/include_conf_items"
        layout="@layout/confirm_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/photoDisplayView" />

    <LinearLayout
        android:id="@+id/list_ll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoDisplayView">

        <com.baoyz.swipemenulistview.SwipeMenuListView
            android:id="@+id/selected_items_lv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoDisplayView" />
    </LinearLayout>

    <Button
        android:id="@+id/upload_to_firebase_button"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/md_orange_900"
        android:text="Done"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/back_arrow_pda_iv"
        android:layout_width="28dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_left" />


</android.support.constraint.ConstraintLayout>
