<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@android:drawable/ic_menu_camera"
        android:title="Camera" />

    <item
        android:id="@+id/navigation_account_settings"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_account_settings" />

    <item
        android:id="@+id/navigation_more_info"
        android:icon="@drawable/ic_more_info"
        android:title="Nutrition" />
    <item
        android:id="@+id/navigation_add_more"
        android:icon="@drawable/ic_plus_round"
        android:title="Add"/>

</menu>
