<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sign_up_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adam.camerawithsaveapi24.SignInActivity">

    <Button
        android:id="@+id/google_sign_in_button"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="92dp"
        android:layout_marginStart="92dp"
        android:drawableStart="@drawable/common_google_signin_btn_icon_light"
        android:gravity="start|center_vertical"
        android:text="@string/log_in_with_google"
        app:layout_constraintBottom_toTopOf="@+id/not_registered_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/email_signin_button"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginStart="92dp"
        android:text="Sign In"
        app:layout_constraintBottom_toTopOf="@+id/google_sign_in_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/not_registered_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="117dp"
        android:layout_marginStart="118dp"
        android:text="No account? Create one"
        app:layout_constraintBottom_toTopOf="@+id/tvSkipForNowSI"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <EditText
        android:id="@+id/email_sign_up_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="85dp"
        android:ems="10"
        android:hint="email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/tvPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <EditText
        android:id="@+id/password_sign_up_et"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="85dp"
        android:ems="10"
        android:hint="password"
        android:inputType="textVisiblePassword"
        app:layout_constraintBottom_toTopOf="@+id/email_signin_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="267dp"
        android:layout_marginStart="83dp"
        android:layout_marginTop="30dp"
        android:text="Email"
        app:layout_constraintBottom_toTopOf="@+id/email_sign_up_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="237dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:text="Password"
        app:layout_constraintBottom_toTopOf="@+id/password_sign_up_et"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_sign_up_et" />

    <TextView
        android:id="@+id/tvSkipForNowSI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="151dp"
        android:layout_marginStart="151dp"
        android:text="Skip For Now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/sign_in_progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
