<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/more_info_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.adam.camerawithsaveapi24.MoreInformationActivity">


    <LinearLayout
...
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/ic_left_arrow_date" />

        <TextView
            android:id="@+id/info_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center"
            android:text="TextView" />
...
